# purah

./: .gitignore  AGENTS.md  README.md  purah.py  pyproject.toml  requirements.txt
purah/: __init__.py  analyzer.py  cli.py  config.py  extractor.py  pipeline.py  subtitler.py  transcriber.py  watcher.py
