[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "purah"
version = "0.1.0"
description = "Twitch stream shorts extractor using whisper.cpp and local LLMs"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "you@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "click>=8.1.0",
    "watchdog>=3.0.0",
    "requests>=2.28.0",
    "rich>=13.0.0",
]

[project.scripts]
purah = "purah.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["purah*"]

[tool.setuptools.package-dir]
purah = "purah"
